--- a/ALACDecoderDemo/ALACDecoderDemo.csproj
+++ b/ALACDecoderDemo/ALACDecoderDemo.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DecodeAlacDemo</RootNamespace>
     <AssemblyName>DecodeAlacDemo</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -26,6 +26,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -69,6 +70,10 @@
     <ProjectReference Include="..\ALACDecoder\ALACDecoder.csproj">
       <Project>{94eff4f5-99da-4c74-9892-dbbb99188dd0}</Project>
       <Name>ALACDecoder</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AlacNetNAudioAdapter\AlacNetNAudioAdapter.csproj">
+      <Project>{7d4eb008-1390-44dc-828c-998033834459}</Project>
+      <Name>AlacNetNAudioAdapter</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
